fixed z-index issue with md-select and main__toolbar
hide md-select icon/initials/img on selected option

removed spacing on timeline md-lists

--- a/src/scss/003_Generic/_img.scss
+++ b/src/scss/003_Generic/_img.scss
@@ -5,6 +5,8 @@ img {
     &.size {
         @each $size in $sizes {
             &--#{$size} {
+                width: $size + px;
+                height: $size + px;
                 max-width: $size + px;
                 max-height: $size + px;
             }
