--- a/src/scss/006_Components/_cmdToolbar.scss
+++ b/src/scss/006_Components/_cmdToolbar.scss
@@ -1,3 +1,3 @@
 #main__toolbar {
-  z-index: 999;
+  z-index: 89;
 }
